[gd_scene load_steps=4 format=3 uid="uid://6637oxn7ct5y"]

[ext_resource type="Script" uid="uid://bte3vc7koxgui" path="res://listas/Lista3/Exercicio4/Exercicio4.gd" id="1_senit"]

[sub_resource type="LabelSettings" id="LabelSettings_07jpv"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_e0lnp"]
font_size = 18

[node name="Exercicio4" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_senit")

[node name="InformacoesConta" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Titulo" type="Label" parent="InformacoesConta"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 28
text = "Informações da 
Conta:"

[node name="Informacoes" type="Label" parent="InformacoesConta"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TituloAplicacao" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Conta bancária"
label_settings = SubResource("LabelSettings_07jpv")
horizontal_alignment = 1

[node name="Operacoes" type="GridContainer" parent="Center/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 3

[node name="AdicionarSaldoLabel" type="Label" parent="Center/VBox/Operacoes"]
layout_mode = 2
text = "Adicionar Saldo"

[node name="SacarDinheiroLabel" type="Label" parent="Center/VBox/Operacoes"]
layout_mode = 2
text = "Sacar Dinheiro"

[node name="MudarNomeLabel" type="Label" parent="Center/VBox/Operacoes"]
layout_mode = 2
text = "Mudar Nome"

[node name="AdicionarSaldoField" type="LineEdit" parent="Center/VBox/Operacoes"]
unique_name_in_owner = true
layout_mode = 2

[node name="SacarDinheiroField" type="LineEdit" parent="Center/VBox/Operacoes"]
unique_name_in_owner = true
layout_mode = 2

[node name="MudarNomeField" type="LineEdit" parent="Center/VBox/Operacoes"]
unique_name_in_owner = true
layout_mode = 2

[node name="AdicionarSaldoButton" type="Button" parent="Center/VBox/Operacoes"]
layout_mode = 2
text = "Adicionar"

[node name="SacarDinheiroButton" type="Button" parent="Center/VBox/Operacoes"]
layout_mode = 2
text = "Sacar"

[node name="MudarNomeButton" type="Button" parent="Center/VBox/Operacoes"]
layout_mode = 2
text = "Mudar"

[node name="Resultado" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_e0lnp")
vertical_alignment = 1

[connection signal="pressed" from="Center/VBox/Operacoes/AdicionarSaldoButton" to="." method="adicionar"]
[connection signal="pressed" from="Center/VBox/Operacoes/SacarDinheiroButton" to="." method="sacar"]
[connection signal="pressed" from="Center/VBox/Operacoes/MudarNomeButton" to="." method="mudar_nome"]
